--- a/docs/styles/styles.module.scss
+++ b/docs/styles/styles.module.scss
@@ -30,7 +30,7 @@
 
 .showcaseWrapper {
   margin: 2rem 0;
-  width: fit-content;
+  width: 100%;
   display: flex;
   gap: 2rem;
   align-items: center;
