* test fix build error

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -32,8 +32,8 @@
 .dark {
   --uil-black: #ffffff;
   --uil-outline-focus: #7bb4ff;
-  --uil-grey-dark: #c4c4c4;
-  --uil-grey-alt: #c3c3c3;
+  --uil-grey-dark: #a3a3a3;
+  --uil-grey-alt: #5c5c5c;
 
   --uil-default-hover: 50, 121, 202;
   --uil-black-alt: #c3c3c3;
