--- a/packages/ui-library/src/components/input/input.module.scss
+++ b/packages/ui-library/src/components/input/input.module.scss
@@ -2,42 +2,38 @@
 
 .inputField {
   width: 100%;
-  
+
   .inputWrapper {
     position: relative;
     display: flex;
     align-items: center;
 
     &.basic {
-      border-bottom: 1px solid var(--uil-grey-alt);
+      border-bottom: 1px solid var(--uil-grey-dark);
 
       .input {
         padding-left: 0;
       }
-      
+
       .label {
         left: 0;
       }
 
       .fieldset {
-        border-bottom: 1px solid var(--uil-grey-alt);
+        border-bottom: 1px solid var(--uil-grey-dark);
       }
 
       .decorator.left {
         margin-right: .875rem;
       }
     }
-    
+
     &.outlined {
-      border: 1px solid var(--uil-grey-alt);
+      border: 1px solid var(--uil-grey-dark);
       border-radius: 5px;
 
-      &:has(.decorator.visible) {
-        border: transparent;
-      }
-      
       .fieldset {
-        border: 1px solid var(--uil-grey-alt);
+        border: 1px solid var(--uil-grey-dark);
         border-radius: 5px;
       }
 
@@ -51,10 +47,16 @@
     }
 
     &.basic, &.outlined {
-      &:not(:has(.input:disabled)):not(.error):not(:focus-within):has(.input:placeholder-shown):hover {
-        border-color: var(--uil-black);
-        
-        .fieldset {
+      &:not(:has(.input:disabled)):not(.error):not(:focus-within) {
+        &:has(.input:placeholder-shown):hover {
+          border-color: var(--uil-black);
+
+          .fieldset {
+            border-color: var(--uil-black);
+          }
+        }
+
+        &:has(:not(.input:placeholder-shown)):hover .fieldset {
           border-color: var(--uil-black);
         }
       }
@@ -66,21 +68,33 @@
       &:has(.decorator.left) {
         flex-direction: row-reverse;
       }
+
+      &:has(.decorator.visible) {
+        border: transparent;
+      }
+
+      &:has(.input:disabled) {
+        border-color: var(--uil-grey-alt);
+      }
+
+      &:has(.input:disabled:not(:placeholder-shown)) {
+        border-color: transparent;
+      }
     }
-    
+
     &.error {
       border-color: var(--uil-error);
-      
+
       .fieldset, .input:focus ~ .fieldset, .input:not(:placeholder-shown) ~ .fieldset {
         border-color: var(--uil-error);
       }
-      
+
       .label {
         color: var(--uil-error);
         opacity: 1;
       }
     }
-    
+
     .fieldset {
       border-radius: 0;
       padding: var(--uil-s);
@@ -114,7 +128,7 @@
       font-size: var(--uil-l);
       line-height: var(--uil-l);
       transition: font-size 0.25s ease, line-height 0.25s ease;
-      
+
       &.asterisk {
         margin-left: var(--uil-xxxs);
       }
@@ -129,11 +143,7 @@
       padding: var(--uil-xs);
       padding-left: .875rem;
       border: none;
-
-      &:focus, &:not(:placeholder-shown) {
-        outline: none;
-        border-color: transparent;
-      }
+      outline: none;
 
       &:disabled {
         color: var(--uil-grey-dark);
@@ -155,8 +165,9 @@
     }
 
     .decorator {
+      min-width: fit-content;
       opacity: .75;
-      
+
       &.focus {
         visibility: hidden;
       }
@@ -171,7 +182,7 @@
       top: -35%;
     }
 
-    &:not(.error) .input:not(:disabled):focus ~ .label, &:not(.error) .input:not(:disabled):not(:placeholder-shown) ~ .label {
+    &:not(.error) .input:not(:disabled):focus ~ .label {
       opacity: 1;
       color: var(--uil-outline-focus);
     }
@@ -181,7 +192,7 @@
       visibility: visible;
     }
 
-    .input:focus ~ .fieldset, .input:not(:placeholder-shown) ~ .fieldset {
+    .input:focus ~ .fieldset {
       border-color: var(--uil-outline-focus);
       border-width: 2px;
     }
@@ -203,12 +214,12 @@
     margin-left: var(--uil-s);
     margin-top: var(--uil-xxs);
     min-height: var(--uil-m);
-    
+
     &.error {
       color: var(--uil-error);
     }
   }
-  
+
   .inputWrapper.basic ~ .helpText {
     margin-left: 0;
   }
