--- a/packages/ui-library/src/components/check/check.module.scss
+++ b/packages/ui-library/src/components/check/check.module.scss
@@ -12,19 +12,15 @@
     min-width: var(--uil-l);
     border: 2px solid var(--uil-black-alt);
     box-sizing: border-box;
-
-    &:has(input:disabled) {
-      background-color: var(--uil-grey);
-      border-color: var(--uil-grey-dark);
+    cursor: pointer;
+    
+    &.box {
+      border-radius: 2px;
     }
 
-    &.dark {
-      border-color: var(--uil-grey);
-
-      &:has(input:disabled) {
-        background-color: var(--uil-black-light);
-        border-color: var(--uil-grey-dark);
-      }
+    &:has(input:disabled) {
+      border-color: var(--uil-grey-dark);
+      cursor: default;
     }
 
     input {
@@ -42,7 +38,7 @@
 
       &:disabled {
         ~ .checkmark {
-          background-color: var(--uil-grey-dark);
+          background-color: var(--uil-grey-alt);
         }
       }
     }
@@ -51,15 +47,11 @@
       position: absolute;
       top: 25%;
       left: 25%;
-      background-color: var(--uil-black-alt);
+      background-color: var(--uil-outline-focus);
       width: var(--uil-xs);
       height: var(--uil-xs);
       transform: scale(0);
       transition: .1s ease;
-
-      &.dark {
-        background-color: var(--uil-white);
-      }
     }
   }
 }
