--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -5,14 +5,13 @@
   --uil-black-lighter: #333333;
 
   --uil-white: #ffffff;
+  --uil-white-alt: #ffffff;
 
   --uil-grey: #f3f3f3;
   --uil-grey-alt: #cfcfcf;
   --uil-grey-dark: #878787;
-
   
   --uil-outline-focus: #2779ca;
-  
   
   --uil-default-hover: 39, 121, 202;
   --uil-success-hover: 0, 156, 115;
@@ -22,7 +21,6 @@
 
   --uil-success: #009c73;
   --uil-error: #CF0934;
-  --uil-question: #00416A;
   --uil-warning: #FFD700;
   --uil-warning-alt: #d1b21a;
 
