* replaces width with size prop

--- a/packages/ui-library/src/components/dialog/dialog.module.scss
+++ b/packages/ui-library/src/components/dialog/dialog.module.scss
@@ -15,15 +15,15 @@
     display: none;
   }
 
-  &.s {
+  &.small {
     width: 25%;
   }
 
-  &.m {
+  &.medium {
     width: 50%;
   }
 
-  &.l {
+  &.large {
     width: 75%;
   }
 
