--- a/packages/ui-library/src/components/dialog/dialog.module.scss
+++ b/packages/ui-library/src/components/dialog/dialog.module.scss
@@ -25,7 +25,7 @@
     font-weight: bold;
     padding: .5rem;
 
-    &.default {
+    &.info {
       background-color: var(--uil-outline-focus);
       color: var(--uil-white);
     }
