--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -24,7 +24,7 @@
 }
 
 .dark {
-  --uil-black: #ffffff;
+  --uil-black-w: #ffffff;
   --uil-outline-focus: #7bb4ff;
   --uil-grey-dark: #a3a3a3;
   --uil-grey-alt: #5c5c5c;
