--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --uil-black: #000000;
+  --uil-black-w: #000000;
   --uil-black-alt: #222222;
   --uil-black-light: #2b2b2b;
   --uil-black-lighter: #333333;
