--- a/packages/ui-library/src/components/input/input.module.scss
+++ b/packages/ui-library/src/components/input/input.module.scss
@@ -49,15 +49,15 @@
     &.basic, &.outlined {
       &:not(:has(.input:disabled)):not(.error):not(:focus-within) {
         &:has(.input:placeholder-shown):hover {
-          border-color: var(--uil-black);
+          border-color: var(--uil-black-w);
 
           .fieldset {
-            border-color: var(--uil-black);
+            border-color: var(--uil-black-w);
           }
         }
 
         &:has(:not(.input:placeholder-shown)):hover .fieldset {
-          border-color: var(--uil-black);
+          border-color: var(--uil-black-w);
         }
       }
 
@@ -119,7 +119,7 @@
       top: 20%;
       left: var(--uil-m);
       cursor: text;
-      color: var(--uil-black);
+      color: var(--uil-black-w);
       opacity: .6;
       transition: top .25s ease-in-out;
     }
@@ -137,7 +137,7 @@
     .input {
       box-sizing: border-box;
       width: 100%;
-      color: var(--uil-black);
+      color: var(--uil-black-w);
       background-color: transparent;
       border-radius: 0;
       padding: var(--uil-xs);
