--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -44,4 +44,6 @@
   --uil-error-hover: 239, 34, 79;
   
   --uil-custom-hover: 255, 255, 255;
+
+  --uil-hover-black-w: rgba(255, 255, 255, 0.1);
 }
