--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -4,6 +4,9 @@
   --uil-black-alt: #222222;
   --uil-black-light: #2b2b2b;
   --uil-black-lighter: #333333;
+  
+  --uil-hover-black: rgba(0, 0, 0, .1);
+  --uil-hover-black-w: rgba(0, 0, 0, .1);
 
   --uil-white: #ffffff;
   --uil-white-alt: #ffffff;
