--- a/docs/styles/styles.module.scss
+++ b/docs/styles/styles.module.scss
@@ -47,3 +47,11 @@
     gap: 2rem;
   }
 }
+
+.showcaseWrapperCol {
+  margin: 2rem 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
