WIP toast component

--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -9,6 +9,7 @@
   --uil-hover-black-w: rgba(0, 0, 0, .1);
 
   --uil-white: #ffffff;
+  --uil-white-b: #ffffff;
   --uil-white-alt: #ffffff;
 
   --uil-grey: #f3f3f3;
