--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -29,6 +29,7 @@
   --uil-grey-dark: #a3a3a3;
   --uil-grey-alt: #5c5c5c;
   --uil-white-alt: #3a3a3a;
+  --uil-black-lighter: #ffffff;
 
   --uil-default-hover: 50, 121, 202;
   --uil-black-alt: #c3c3c3;
