updates toast component

--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -28,6 +28,11 @@
   --uil-error: #CF0934;
   --uil-warning: #FFD700;
   --uil-warning-alt: #d1b21a;
+  
+  --uil-top: initial;
+  --uil-bottom: initial;
+  --uil-left: initial;
+  --uil-right: initial;
 
   --uil-xxxs: .125rem;
   --uil-xxs: .25rem;
