restructures the toast component, toasts can no longer be managed independently - a provider is now required

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -46,5 +46,5 @@
   
   --uil-custom-hover: 255, 255, 255;
 
-  --uil-hover-black-w: rgba(255, 255, 255, 0.1);
+  --uil-box-shadow-w: rgba(175, 175, 175, 0.3);
 }
