--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -6,7 +6,7 @@
   --uil-black-lighter: #333333;
   
   --uil-hover-black: rgba(0, 0, 0, .1);
-  --uil-hover-black-w: rgba(0, 0, 0, .1);
+  --uil-box-shadow-w: rgba(0, 0, 0, .3);
 
   --uil-white: #ffffff;
   --uil-white-b: #ffffff;
