renames css variable outline-focus to info

--- a/packages/ui-library/src/components/check/check.module.scss
+++ b/packages/ui-library/src/components/check/check.module.scss
@@ -69,7 +69,7 @@
       position: absolute;
       top: 25%;
       left: 25%;
-      background-color: var(--uil-outline-focus);
+      background-color: var(--uil-info);
       width: var(--uil-xs);
       height: var(--uil-xs);
       transform: scale(0);
