--- a/packages/ui-library/src/components/dialog/dialog.module.scss
+++ b/packages/ui-library/src/components/dialog/dialog.module.scss
@@ -26,7 +26,7 @@
     padding: .5rem;
 
     &.info {
-      background-color: var(--uil-outline-focus);
+      background-color: var(--uil-info);
       color: var(--uil-white);
     }
 
