--- a/packages/ui-library/src/components/toast/toast.module.scss
+++ b/packages/ui-library/src/components/toast/toast.module.scss
@@ -83,7 +83,7 @@
 
     &.info {
       color: var(--uil-white);
-      background-color: var(--uil-outline-focus);
+      background-color: var(--uil-info);
     }
 
     &.success {
