--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -25,7 +25,7 @@
 
 .dark {
   --uil-black-w: #ffffff;
-  --uil-outline-focus: #7bb4ff;
+  --uil-info: #7bb4ff;
   --uil-grey-dark: #a3a3a3;
   --uil-grey-alt: #5c5c5c;
   --uil-white-alt: #3a3a3a;
