--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -16,7 +16,7 @@
   --uil-grey-alt: #cfcfcf;
   --uil-grey-dark: #878787;
   
-  --uil-outline-focus: #2779ca;
+  --uil-info: #2779ca;
   
   --uil-default-hover: 39, 121, 202;
   --uil-success-hover: 0, 156, 115;
