--- a/packages/ui-library/src/components/button/button.module.scss
+++ b/packages/ui-library/src/components/button/button.module.scss
@@ -7,31 +7,36 @@
   box-sizing: border-box;
   background-color: transparent;
   cursor: pointer;
-
-  &:not(:disabled).filled {
-    color: var(--uil-white);
-    background-color: var(--uil-outline-focus);
+  
+  &.filled {
     box-shadow: 0 0 2px 0 var(--uil-black-alt);
-
-    &:hover {
-      background-color: rgba(var(--uil-default-hover), .9);
-    }
   }
 
-  &:not(:disabled).outlined {
-    color: var(--uil-outline-focus);
-    border-color: var(--uil-outline-focus);
+  &:not(:disabled).info {
+    &.filled {
+      color: var(--uil-white);
+      background-color: var(--uil-info);
 
-    &:not(:disabled):hover {
-      background-color: rgba(var(--uil-default-hover), .12);
+      &:hover {
+        background-color: rgba(var(--uil-default-hover), .9);
+      }
     }
-  }
 
-  &:not(:disabled).text {
-    color: var(--uil-outline-focus);
+    &.outlined {
+      color: var(--uil-info);
+      border-color: var(--uil-info);
 
-    &:not(:disabled):hover {
-      background-color: rgba(var(--uil-default-hover), .08);
+      &:not(:disabled):hover {
+        background-color: rgba(var(--uil-default-hover), .12);
+      }
+    }
+
+    &.text {
+      color: var(--uil-info);
+
+      &:not(:disabled):hover {
+        background-color: rgba(var(--uil-default-hover), .08);
+      }
     }
   }
 
