--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -5,7 +5,6 @@
   --uil-black-light: #2b2b2b;
   --uil-black-lighter: #333333;
   
-  --uil-hover-black: rgba(0, 0, 0, .1);
   --uil-box-shadow-w: rgba(0, 0, 0, .3);
 
   --uil-white: #ffffff;
@@ -16,14 +15,13 @@
   --uil-grey-alt: #cfcfcf;
   --uil-grey-dark: #878787;
   
-  --uil-info: #2779ca;
-  
-  --uil-default-hover: 39, 121, 202;
+  --uil-info-hover: 39, 121, 202;
   --uil-success-hover: 0, 156, 115;
   --uil-warning-hover: 255, 215, 0;
   --uil-error-hover: 207, 9, 52;
   --uil-custom-hover: 0, 0, 0;
 
+  --uil-info: #2779ca;
   --uil-success: #009c73;
   --uil-error: #CF0934;
   --uil-warning: #FFD700;
