--- a/packages/ui-library/src/components/toast/toast.module.scss
+++ b/packages/ui-library/src/components/toast/toast.module.scss
@@ -113,7 +113,7 @@
       fill: var(--uil-white-b);
 
       &:hover {
-        background-color: var(--uil-hover-black);
+        background-color: rgba(0, 0, 0, .1);
       }
     }
   }
