--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -47,7 +47,7 @@
   --uil-error: #fb0b41;
   --uil-error-hover: 239, 34, 79;
   
-  --uil-custom-hover: 255, 255, 255;
+  --uil-custom-hover: rgba(255, 255, 255, .03);
 
   --uil-box-shadow-w: rgba(150, 150, 150, 0.3);
 }
