--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -19,7 +19,7 @@
   --uil-success-hover: 0, 156, 115;
   --uil-warning-hover: 255, 215, 0;
   --uil-error-hover: 207, 9, 52;
-  --uil-custom-hover: 0, 0, 0;
+  --uil-custom-hover: rgba(0, 0, 0, .03);
 
   --uil-info: #2779ca;
   --uil-success: #009c73;
