fixes line height styling

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -10,17 +10,17 @@
 
 .fontSmall {
   font-size: var(--uil-m);
-  line-height: var(--uil-m);
+  line-height: var(--uil-xl);
 }
 
 .fontMedium {
   font-size: var(--uil-l);
-  line-height: var(--uil-l);
+  line-height: var(--uil-xxl);
 }
 
 .fontLarge {
   font-size: var(--uil-xxl);
-  line-height: var(--uil-xxl);
+  line-height: 2.25rem;
 }
 
 .dark {
