small styling fix for hover/focus state

--- a/packages/ui-library/src/components/tag/tag.module.scss
+++ b/packages/ui-library/src/components/tag/tag.module.scss
@@ -5,13 +5,14 @@
   align-items: center;
   gap: var(--uil-xs);
   cursor: default;
-  
-  &:focus {
-    opacity: .8;
-  }
+  outline: none;
   
   &.clickable {
     cursor: pointer;
+
+    &:focus, &:hover {
+      opacity: .85;
+    }
   }
   
   &.small {
