adds linear progress component

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -46,6 +46,11 @@
   
   --uil-error: #fb0b41;
   --uil-error-hover: 239, 34, 79;
+
+  --uil-info-o: rgba(123, 180, 255, .3);
+  --uil-success-o: rgba(0, 204, 150, .3);
+  --uil-warning-o: rgba(255, 255, 62, .3);
+  --uil-error-o: rgba(251, 11, 65, .3);
   
   --uil-custom-hover: rgba(255, 255, 255, .03);
 
