--- a/packages/ui-library/src/components/progress/progress.module.scss
+++ b/packages/ui-library/src/components/progress/progress.module.scss
@@ -30,6 +30,66 @@
   }
 }
 
+.linearProgress {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 5px;
+
+  &.info {
+    background-color: var(--uil-info-o);
+  }
+
+  &.success {
+    background-color: var(--uil-success-o);
+  }
+
+  &.warning {
+    background-color: var(--uil-warning-o);
+  }
+
+  &.error {
+    background-color: var(--uil-error-o);
+  }
+  
+  &.custom {
+    background-color: var(--uil-grey-alt);
+  }
+
+  .progressBar {
+    position: absolute;
+    right: 0;
+    left: 0;
+    height: 100%;
+    width: auto;
+    transition: right var(--uil-progress-delay) ease-in-out 0ms;
+
+    &.first {
+      animation: 2.5s ease-in-out 0s infinite normal none running moving;
+    }
+
+    &.second {
+      animation: 2.5s ease-in-out 0s infinite normal none running moving-alt;
+    }
+
+    &.info {
+      background-color: var(--uil-info);
+    }
+
+    &.success {
+      background-color: var(--uil-success);
+    }
+
+    &.warning {
+      background-color: var(--uil-warning);
+    }
+
+    &.error {
+      background-color: var(--uil-error);
+    }
+  }
+}
+
 @keyframes spinning {
   0% {
     stroke-dasharray: 1px, 120px;
@@ -54,5 +114,39 @@
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes moving {
+  0% {
+    left: -25%;
+    right: 100%;
+  }
+
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+
+  100% {
+    left: 100%;
+    right: -90%;
+  }
+}
+
+@keyframes moving-alt {
+  0% {
+    left: -25%;
+    right: 100%;
+  }
+
+  55% {
+    left: -35%;
+    right: 100%;
+  }
+
+  100% {
+    left: 100%;
+    right: -150%;
   }
 }
