adds skeleton component

--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -38,6 +38,7 @@
   --uil-right: initial;
   
   --uil-progress-delay: 250ms;
+  --uil-pulse-anim: 2.5s;
 
   --uil-xxxs: .125rem;
   --uil-xxs: .25rem;
