adds switch component

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -55,4 +55,5 @@
   --uil-custom-hover: rgba(255, 255, 255, .03);
 
   --uil-box-shadow-w: rgba(150, 150, 150, 0.3);
+  --uil-switch-hover-w: rgba(255, 255, 255, .1);
 }
