--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -6,6 +6,7 @@
   --uil-black-lighter: #333333;
   
   --uil-box-shadow-w: rgba(0, 0, 0, .3);
+  --uil-switch-hover-w: rgba(0, 0, 0, .05);
 
   --uil-white: #ffffff;
   --uil-white-b: #ffffff;
