small styling fix

--- a/packages/ui-library/src/components/details/details.module.scss
+++ b/packages/ui-library/src/components/details/details.module.scss
@@ -29,6 +29,7 @@
     display: flex;
     align-items: center;
     padding: var(--uil-xs);
+    box-sizing: border-box;
 
     &::marker {
       content: none;
