--- a/packages/ui-library/src/components/dialog/dialog.module.scss
+++ b/packages/ui-library/src/components/dialog/dialog.module.scss
@@ -4,6 +4,8 @@
   margin: auto;
   border-radius: 5px;
   background-color: var(--uil-white-alt);
+  padding: 0;
+  border: transparent;
   
   &::backdrop {
     background-color: rgba(0, 0, 0, .5);
