--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -14,7 +14,7 @@
 
   --uil-grey: #f3f3f3;
   --uil-grey-alt: #cfcfcf;
-  --uil-grey-dark: #878787;
+  --uil-grey-dark: #757575;
   
   --uil-info-hover: 39, 121, 202;
   --uil-success-hover: 0, 156, 115;
@@ -22,8 +22,8 @@
   --uil-error-hover: 207, 9, 52;
   --uil-custom-hover: rgba(0, 0, 0, .03);
 
-  --uil-info: #2779ca;
-  --uil-success: #009c73;
+  --uil-info: #2876CD;
+  --uil-success: #00875A;
   --uil-warning: #FFD700;
   --uil-warning-alt: #d1b21a;
   --uil-error: #CF0934;
