--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -28,6 +28,7 @@
   --uil-black-alt: #c3c3c3;
   --uil-black-lighter: #dddddd;
   
+  --uil-grey: #616161;
   --uil-grey-dark: #a3a3a3;
   --uil-grey-alt: #5c5c5c;
   
