--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -12,7 +12,8 @@
   --uil-white-b: #ffffff;
   --uil-white-alt: #ffffff;
 
-  --uil-grey: #f3f3f3;
+  --uil-grey-light: #f3f3f3;
+  --uil-grey: #e9e9e9;
   --uil-grey-alt: #cfcfcf;
   --uil-grey-dark: #757575;
   
