* moves pagination component to subdirectory

--- a/packages/ui-library/src/components/pagination/page/pagination.module.scss
+++ b/packages/ui-library/src/components/pagination/page/pagination.module.scss
@@ -1,4 +1,4 @@
-@use '../common/styles/mixin' as *;
+@use '../../common/styles/mixin' as *;
 
 .pagination {
   --uil-pagination-size: var(--uil-xl);
