* adjusts warning-alt to match wcag color-contrast guidelines

--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -26,7 +26,7 @@
   --uil-info: #2876CD;
   --uil-success: #00875A;
   --uil-warning: #FFD700;
-  --uil-warning-alt: #d1b21a;
+  --uil-warning-alt: #84722A;
   --uil-error: #CF0934;
 
   --uil-info-o: rgba(39, 121, 202, .3);
